# restorax

./: .gitignore  PLAN.md  Procfile.dev  README.md  STATUS.md  pyproject.toml
comfyui_nodes/: __init__.py  _base.py  artifact_removal.py  audio.py  colorization.py  deinterlacing.py  face_restoration.py  frame_interpolation.py  hdr.py  requirements.txt  stabilization.py  super_resolution.py
configs/presets/: classic_film.yaml
docs/: samples.md
docs/assets/restorations/: manifest.json
docs/superpowers/archive/plans/: 2026-05-03-doc-refactor.md  2026-05-04-backend-hardening.md  2026-05-06-real-model-activation.md  2026-05-20-backend-foundations.md  2026-05-29-pipeline-dag-engine.md  2026-05-29-restorax-master-plan.md
docs/superpowers/archive/specs/: 2026-05-03-doc-refactor-design.md  2026-05-06-real-model-activation-design.md
docs/superpowers/plans/: 2026-05-29-restorax-master-plan.md  2026-06-21-comfyui-node-pack.md
docs/superpowers/specs/: 2026-05-04-backend-hardening-design.md  2026-05-06-real-model-activation-design.md  2026-05-29-pipeline-dag-design.md
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/jobs/[id]/: page.tsx
frontend/components/: CompareSlider.tsx  JobCard.tsx  JobForm.tsx  ProgressBar.tsx
frontend/lib/: api.ts
frontend/src/: index.css  main.tsx  types.ts
frontend/src/components/: GpuStatusWidget.tsx
frontend/src/components/builder/: ConfigPanel.tsx  Palette.tsx  factory.ts  serialize.ts  types.ts  useUndoRedo.ts  workflow.ts
frontend/src/components/builder/nodes/: NodeShell.tsx  index.tsx
frontend/src/components/dashboard/: JobsTable.tsx  PresetCard.tsx  StatsStrip.tsx  presets.ts
frontend/src/components/jobdetail/: BranchCompare.tsx  BranchList.tsx  MergePanel.tsx  ResultPanel.tsx  branches.ts
frontend/src/components/layout/: AppShell.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx
frontend/src/hooks/: useJobProgress.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Dashboard.tsx  JobDetail.tsx  PipelineBuilder.tsx
frontend/tests/: components.test.tsx  lib.api.test.ts
restorax/: cli.py  cli_download.py  config.py  logging.py  models_catalog.py  telemetry.py
restorax/api/: app.py  middleware.py
restorax/api/routers/: health.py  jobs.py  models.py  pipelines.py
restorax/api/schemas/: job.py  model.py  pipeline.py
restorax/audio/: restorer.py
restorax/core/: exceptions.py  pipeline.py  restorer.py
restorax/dag/: __init__.py  executor.py  node.py  serializer.py
restorax/dag/nodes/: __init__.py  control.py  map_node.py  restore.py
restorax/db/: models.py
restorax/db/repositories/: job_repo.py
restorax/restorers/artifact_removal/: scratch_removal.py
restorax/restorers/audio/: demucs.py  voicefixer.py
restorax/restorers/deinterlacing/: yadif_deinterlace.py
restorax/restorers/face_restoration/: codeformer.py  codeformer_arch.py  codeformer_pp.py  dicface.py  gfpgan.py  vqgan_arch.py
restorax/restorers/frame_interpolation/: rife.py
restorax/restorers/super_resolution/: basicvsr_pp.py  evtexture.py  flashvsr.py  mamba_ir.py  real_esrgan.py  seedvr.py  tdm.py  upscale_a_video.py  vrt.py  vrt_arch.py  waifu2x.py
restorax/tasks/: job_tasks.py
scripts/: generate_real_samples.py
tests/: conftest.py
tests/integration/: conftest.py  test_comfyui_load.py  test_download_models.py  test_health.py
tests/unit/: test_codeformer_pp_restorer.py  test_comfyui_node_files.py  test_comfyui_nodes.py  test_dag_api.py  test_flashvsr_restorer.py  test_health_celery.py  test_job_tasks.py  test_logging.py  test_mamba_ir_restorer.py  test_middleware_observability.py  test_models_catalog.py  test_models_router.py  test_no_silent_stubs.py  test_pipeline.py  test_pytest_marks.py  test_real_esrgan_restorer.py  test_rife_restorer.py  test_scratch_removal_restorer.py  test_telemetry.py  test_upscale_a_video_restorer.py  test_vrt_restorer.py  test_waifu2x_restorer.py  test_yadif_deinterlace_restorer.py
tests/unit/dag/: test_errors.py  test_executor.py  test_graph.py  test_nodes_control.py  test_nodes_restore.py  test_serializer.py
tests/unit/restorers/: test_ddcolor.py  test_new_restorers.py  test_new_restorers_v2.py  test_phase4_restorers.py  test_phase5_restorers.py  test_rife.py
