[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "restorax"
version = "0.1.0"
description = "Modern AI video restoration platform"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    # Task queue
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    # Config / validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # Video I/O
    "av>=12.0.0",
    # ML
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "numpy>=1.26.0",
    "pillow>=10.3.0",
    "opencv-python-headless>=4.9.0",
    # ML toolboxes
    "basicsr>=1.4.2",
    # Quality metrics
    "piqa>=1.3.0",
    # Observability
    "structlog>=24.1.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-celery>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-instrumentation-redis>=0.45b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "opentelemetry-exporter-prometheus>=0.45b0",
    "prometheus-client>=0.20.0",
    # Weights download
    "huggingface-hub>=0.23.0",
    # Utilities
    "click>=8.1.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
face = [
    "gfpgan>=1.3.8",
    "facexlib>=0.3.0",
]
apm = [
    "sentry-sdk[fastapi,celery]>=2.0.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-celery>=1.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12",
    "types-redis>=4.6.0",
]

[project.scripts]
restorax = "restorax.cli:cli"

# ── Plugin entry points ────────────────────────────────────────────────────────
# Third-party restorer plugins register under this group.
# Example in a plugin's pyproject.toml:
#   [project.entry-points."restorax.restorers"]
#   my_restorer = "my_package.restorer:MyRestorer"
[project.entry-points."restorax.restorers"]
real_esrgan_x4plus   = "restorax.restorers.super_resolution.real_esrgan:RealESRGANx4Restorer"
basicvsr_pp_x4       = "restorax.restorers.super_resolution.basicvsr_pp:BasicVSRPlusPlusRestorer"
vrt_x4               = "restorax.restorers.super_resolution.vrt:VRTRestorer"
upscale_a_video      = "restorax.restorers.super_resolution.upscale_a_video:UpscaleAVideoRestorer"
ddcolor              = "restorax.restorers.colorization.ddcolor:DDColorRestorer"
codeformer           = "restorax.restorers.face_restoration.codeformer:CodeFormerRestorer"
gfpgan_v14           = "restorax.restorers.face_restoration.gfpgan:GFPGANRestorer"
rife_v4              = "restorax.restorers.frame_interpolation.rife:RIFERestorer"
scratch_removal      = "restorax.restorers.artifact_removal.scratch_removal:ScratchRemovalRestorer"
hdrtvdm              = "restorax.restorers.hdr.hdrtvdm:HDRTVDMRestorer"
video_stabilization  = "restorax.restorers.stabilization.deep_flow_stab:VideoStabilizationRestorer"
ai_deinterlace       = "restorax.restorers.deinterlacing.ai_deinterlace:AIDeinterlaceRestorer"
mamba_ir_x4          = "restorax.restorers.super_resolution.mamba_ir:MambaIRRestorer"
tdm                  = "restorax.restorers.super_resolution.tdm:TDMRestorer"
codeformer_pp        = "restorax.restorers.face_restoration.codeformer_pp:CodeFormerPlusPlusRestorer"
gavs                 = "restorax.restorers.stabilization.gavs:GaVSRestorer"
waifu2x_x2           = "restorax.restorers.super_resolution.waifu2x:Waifu2xRestorer"
flashvsr_x4          = "restorax.restorers.super_resolution.flashvsr:FlashVSRRestorer"
evtexture_x4         = "restorax.restorers.super_resolution.evtexture:EvTextureRestorer"
seedvr               = "restorax.restorers.super_resolution.seedvr:SeedVRRestorer"
dicface              = "restorax.restorers.face_restoration.dicface:DicFaceRestorer"

[tool.hatch.build.targets.wheel]
packages = ["restorax"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "gpu: requires a CUDA GPU",
    "slow: slow integration tests",
]
